# metabase-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  test_direct_metabase.py  test_with_client.py
scripts/: test_collection_search.py  test_comprehensive.py
src/: __init__.py  __main__.py  config.py  logger.py  server.py
