[project]
name = "metabase-mcp"
version = "0.1.0"
description = "A modern FastMCP server for Metabase integration with type-safe configuration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Adrian Stanescu", email = "prism.sails_6@icloud.com"},
    {name = "Hugo Lau", email = "hugolau23@example.com"},
]
keywords = ["metabase", "mcp", "model-context-protocol", "ai", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.12.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "starlette>=0.46.2",
    "sse-starlette==2.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/kmlx/metabase-mcp"
Repository = "https://github.com/kmlx/metabase-mcp"
Issues = "https://github.com/kmlx/metabase-mcp/issues"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
